--- a/main.ipynb
+++ b/main.ipynb
@@ -15,8 +15,7 @@
     "import itertools\n",
     "\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "dd87b6cc-3c5b-42a8-8c6e-f81f4d0976be",
    "metadata": {},
    "outputs": [],
@@ -65,13 +64,12 @@
     "    \n",
     "    with open(path, 'r') as f:\n",
     "        if company_name in [\"google\", \"amazon\", \"facebook\", \"microsoft_cloud\", \"microsoft_noncloud\", \"twitter\"]:\n",
-    "            DATA[company_name] = json.load(f)\n",
-    "    \n"
+    "            DATA[company_name] = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "8f79da42-19bf-4d06-8695-8b0b09b4a596",
    "metadata": {},
    "outputs": [],
@@ -113,7 +111,7 @@
     "                    { \"passthrough_amount\": (float(contract[passthrough_key]) / 100) * float(contract[\"base_and_all_options_value\"]) }\n",
     "                )\n",
     "    \n",
-    "    CONTRACTS[company] = company_contracts\n"
+    "    CONTRACTS[company] = company_contracts"
    ]
   },
   {
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "4c249832-e996-453c-b3a3-65a7361753f2",
    "metadata": {},
    "outputs": [],
@@ -169,7 +167,7 @@
     "    \n",
     "# years = get_year_range()\n",
     "\n",
-    "years = list(range(2005, 2021))\n"
+    "years = list(range(2005, 2021))"
    ]
   },
   {
@@ -543,14 +541,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5aa35efd-01d9-4de1-b3cd-51d648ba2de0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "0d409c3f-5b1d-43ee-8ea0-73e608242150",
    "metadata": {},
@@ -590,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "432e70d8-461a-4844-b3a1-0612cf876ca6",
    "metadata": {},
    "outputs": [
@@ -612,14 +602,8 @@
     "    data = { k: [ x[key] for x in v] for k, v in results.items()}\n",
     "    return pd.DataFrame(data, index=years)\n",
     "\n",
-    "\n",
-    "def plot_df(df):\n",
-    "    return df.plot(figsize=(10, 8))\n",
-    "\n",
-    "    \n",
-    "\n",
     "fig, axes = plt.subplots(nrows=3, ncols=2, figsize=(15, 15))\n",
-    "  \n",
+    "\n",
     "df_for_key(group_by_agency_and_year(CONTRACTS['microsoft_cloud'])).plot(ax=axes[0,0])    \n",
     "axes[0,0].set_title('Microsoft Cloud')\n",
     "\n",
@@ -635,7 +619,7 @@
     "df_for_key(group_by_agency_and_year(CONTRACTS['twitter'])).plot(ax=axes[2,0])    \n",
     "axes[2,0].set_title('Twitter')\n",
     "\n",
-    "fig.delaxes(axes[2,1])\n"
+    "fig.delaxes(axes[2,1])"
    ]
   },
   {
@@ -685,22 +669,6 @@
     "        DIRECT[company_name] = json.load(f)['filings']\n",
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31291561-8987-483c-a914-590cdbbd7836",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a759ed9-16aa-436f-b5d3-fcab45fe3cac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
